# tonenizer-finetuning

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  README.md  STYLE.md  notebook.py  pyproject.toml
assets/: logo_uri.txt  theme-src.css  theme.css
assets/fonts/: fonts.css
assets/snippets/: bus_tool.py  dv_tool.py
cache/: comparisons.json  landscape.json  loss.json  smoke_comparisons.json
cache/interp/: induction.json  logit_diff.json  logit_lens.json  meta.json
data/: eval_prompts.json  smoke_eval.json  smoke_raw.jsonl  smoke_train.jsonl  train.jsonl
scripts/: build_theme.py  cli.py  evaluate.py  filter_data.py  generate_data.py  landscape.py  merge_and_interp.py  train.py
