[project]
name = "tokenizer-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "altair>=6.2.2",
    "circuitsvis>=1.43.3",
    "datasets>=5.0.0",
    "marimo>=0.23.14",
    "openai>=2.45.0",
    "peft>=0.19.1",
    "torch>=2.13.0",
    "transformer-lens>=3.5.1",
    "transformers>=5.13.0",
    "trl>=1.8.0",
]

[dependency-groups]
dev = [
    "playwright>=1.61.0",
]
